fixing broken css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,19 @@
+/** HEADING FONT **/
+h1 {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0;
+  color: #0f7d3d;
+}
+
 body {
     margin: 0;
+    background-color: #f5f2e1;
 }
+
 #learnNav {
     position: fixed;
     z-index:1;
@@ -108,19 +121,6 @@ body {
 
 /* Jasleen - program-calc */
 
-#jas body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #032903;
-  }
-
-  h1{
-    color: #ffffff;
-    text-align: center;
-    margin-top: 40px;
-  }
-  
 h2{
   text-align: center;
 }
